# lshx

./: Makefile  README.md  lshx.py  pyproject.toml
lib/formatters/: base.py  plain.py  plain_newline.py
lib/formatters/tests/: test_base.py  test_plain.py  test_plain_newline.py
lib/targets/: base.py  detector.py  directory.py  exceptions.py  file.py  utils.py
lib/targets/tests/: test_base.py  test_detector.py  test_utils.py
