[tool.poetry]
name = "lshx"
version = "0.1.0"
description = ""
authors = ["Paweł Andziak <pawel.andziak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.6.0"
Flake8-pyproject = "^1.1.0"
pytest = "^7.1.2"
coverage = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ".venv,.pytest_cache,.mypy_cache"
max-line-length = 120